<resources>
    <string name="app_name">Colombia Travel</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="rpassword">Repetir Password</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="principal">Principal</string>
    <string name="contra">Contraseña :</string>
    <string name="usuario">Usuario :</string>
</resources>
